# qt-hoverTools

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
core/: UserAction.h  UserShortcutsProvider.cpp  UserShortcutsProvider.h
plugins/: IActionProvider.h
ui/: FloatingAssistant.cpp  FloatingAssistant.h  ToolbarPanel.cpp  ToolbarPanel.h
